Closed Bug 334298 Opened 19 years ago Closed 19 years ago

GetCSSFloatValue uses f uninitialized in a case that doesn't happen

Categories

(Core :: DOM: Editor, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 file, 1 obsolete file)

this can't happen, but i'd rather preinitialize and not use the default case.
Attached patch preinit fSplinter Review
Attachment #218629 - Flags: review?(daniel)
Attachment #218629 - Flags: superreview?(neil)
Attachment #218630 - Flags: superreview?(neil)
Attachment #218630 - Flags: review?(daniel)
Comment on attachment 218630 [details] [diff] [review] preinit f and use elses for exclusive cases coverity can't know that str can only have one of those three values... I certainly don't ;-)
Attachment #218630 - Flags: superreview?(neil) → superreview+
Attachment #218629 - Flags: superreview?(neil)
Attachment #218630 - Flags: review?(daniel) → review+
Attachment #218629 - Flags: review?(daniel)
Comment on attachment 218630 [details] [diff] [review] preinit f and use elses for exclusive cases mozilla/editor/libeditor/html/nsHTMLAnonymousUtils.cpp 1.12
Attachment #218630 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: