Bug 334298 GetCSSFloatValue uses f uninitialized in a case that doesn't happen r=glazou sr=neil